--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <main>
       <div class="main-container">
         <div class="videoBox-1">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/14C6pEqe28U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <button>Play -></button>
+            <iframe width="full" height="full" src="https://www.youtube.com/embed/14C6pEqe28U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <!-- <button>Play -></button> -->
         </div>
         <div class="youtubeBox">
           <span>YouTube</span>
@@ -44,8 +44,8 @@
           <span>Pucher Tobias</span>
         </div>
         <div class="videoBox-2">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/14C6pEqe28U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <button>Play -></button>
+            <iframe width="full" height="full" src="https://www.youtube.com/embed/14C6pEqe28U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <!-- <button>Play -></button> -->
         </div>
         <div class="instagramBox">
           <span>INSTAGRAM</span>
