--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <main>
       <div class="main-container">
         <div class="videoBox-1">
-            <iframe width="500" height="400" src="https://www.youtube.com/embed/14C6pEqe28U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="500px" height="400px" src="https://www.youtube.com/embed/14C6pEqe28U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <!-- <button>Play -></button> --> 
         </div>
         <div class="youtubeBox">
@@ -44,7 +44,7 @@
           <span>Pucher Tobias</span>
         </div>
         <div class="videoBox-2">
-            <iframe width="500" height="400" src="https://www.youtube.com/embed/14C6pEqe28U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="500px" height="400px" src="https://www.youtube.com/embed/14C6pEqe28U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <!-- <button>Play -></button> -->
         </div>
         <div class="instagramBox">
