--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:300,400,500,700|Roboto:400,500,700" rel="stylesheet">
 </head>
 <body>
+  <img class="rect" src="./assets/Rectangle.svg" alt="">
   <div class="page-wrapper">
     <!-- HEADER -->
     <header class="header" role="heading">
